--- a/public/css/app.css
+++ b/public/css/app.css
@@ -718,7 +718,7 @@ td.date {
 }
 
 /*
-#pouetbox_bbsview .navbar, #pouetbox_onelinerview .navbar, #pouetbox_prodcomments 
+#pouetbox_bbsview .navbar, #pouetbox_onelinerview .navbar, #pouetbox_prodcomments
 */
 
 .navbar {
@@ -737,7 +737,7 @@ td.date {
 }
 
 /*
-#pouetbox_prodcomments 
+#pouetbox_prodcomments
 */
 
 .navbar {
@@ -1994,3 +1994,45 @@ body > .customizerBox.floaty .content {
   margin: 5px;
 }
 
+/* Popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+.popup .popuptext::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.popup .show{
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
