--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -645,7 +645,7 @@ td.date {
 }
 
 /*
-#pouetbox_bbsview .navbar, #pouetbox_onelinerview .navbar, #pouetbox_prodcomments 
+#pouetbox_bbsview .navbar, #pouetbox_onelinerview .navbar, #pouetbox_prodcomments
 */
 .navbar {
   background: #224488;
@@ -661,7 +661,7 @@ td.date {
   height: 16px;
 }
 /*
-#pouetbox_prodcomments 
+#pouetbox_prodcomments
 */
 .navbar {
   padding: 4px;
@@ -1784,4 +1784,47 @@ body > .customizerBox.floaty .content {
 #welcome-avatarlist li {
   display: inline-block;
   margin: 5px;
+}
+
+/* Popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+.popup .popuptext::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.popup .show{
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
